# ridges

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.bak  Dockerfile.iptables-init  Dockerfile.validator  LICENSE  Makefile  README.md  agent.py  agent_structure.md  alembic.ini  bootstrap-oneliner.sh  bootstrap.sh  dev-up.sh  docker-compose.yml  github_test.ipynb  min_compute.yml  prompt.txt  pyproject.toml  requirements.txt  retry_upload.sh  ridges-localnet.sh  ridges.py  setup-ridges.sh  setup.py  test_agent.py  test_agent_problem_sets.json  test_miner.py
alembic/: env.py
all_problems/: astropy_astropy-13033.json  astropy_astropy-13398.json  astropy_astropy-13453.json  astropy_astropy-14365.json  astropy_astropy-14369.json  astropy_astropy-14995.json  astropy_astropy-7166.json  django_django-10097.json  django_django-10554.json  django_django-10914.json  django_django-10973.json  django_django-10999.json  django_django-11066.json  django_django-11087.json  django_django-11095.json  django_django-11099.json  django_django-11133.json  django_django-11138.json  django_django-11163.json  django_django-11179.json  django_django-11206.json  django_django-11211.json  django_django-11265.json  django_django-11276.json  django_django-11299.json  django_django-11333.json  django_django-11400.json  django_django-11433.json  django_django-11477.json  django_django-11490.json  django_django-11532.json  django_django-11551.json  django_django-11555.json  django_django-11603.json  django_django-11728.json  django_django-11740.json  django_django-11790.json  django_django-11815.json  django_django-11848.json  django_django-11880.json  (+192 more)
api/: .commits_cache.json  .env.example  Dockerfile  REAMDE.md  config.py  errors.py  incentives.py
bittensor/: check_if_hotkey_is_registered.py  set_weights.py
db/: README.md  base.py
docs/: comparison.html  local-testing.md  local_testing.md  running_on_staging.md  sandbox.md  tools.md
evaluator/: models.py
execution/: README.md  __init__.py  artifacts.py  engine.py  errors.py  failure_classifier.py  types.py
inference_gateway/: .env.example  config.py  cost_hash_map.py  error_hash_map.py  main.py  models.py
k8s/: kind-config.yaml
miner/: README.md  (+5 more)
(+1270 files in other folders)
