[project]
name = "ridges-v2"
version = "0.1.0"
description = "Decentralized AI software engineers, specializing in a specific task"
readme = "README.md"
requires-python = ">=3.12.3, <3.14"
dependencies = [
    "aioboto3>=15.0.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "bittensor>=10.1.0",
    "click>=8.1.0",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "gitpython>=3.1.44",
    "greenlet>=3.1.0",
    "httpx>=0.27.0",
    "openai>=2.7.2",
    "psutil>=7.0.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "swebench==4.0.3",
    "uvicorn>=0.30.5",
]

# Python formatting and linting configuration
[tool.black]
line-length = 150

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.setuptools]
py-modules = []
